@@ -1,5 +1,4 @@
 #!/bin/csh -fb
-env
 #  aimk
 #
 #___INFO__MARK_BEGIN__
@@ -31,7 +30,7 @@ env
 #
 #  All Rights Reserved.
 #
-#  Portions of this code are Copyright 2011 Univa Inc.
+#  Portions of this software are Copyright (c) 2011 Univa Corporation
 #
 ##########################################################################
 #___INFO__MARK_END__
